data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_558.wast
;; - **Test 9**:    Design a loop driven by a counter that wraps around (e.g., incrementing up to the max value of an integer type), ensuring the condition to break the loop never succeeds after wrap around.     Constraint: Counter overflow causing indefinite loop.     Relation: Ensures correct handling of counter-based loop exit condition.

(assert_invalid
  (module
    (func (loop (result i32) 
      (i32.const 0) 
      (i32.const 1) 
      (i32.add) 
      (br_if 0 (i32.eqz (tee_local 0 (i32.add (local.get 0) (i32.const 1))))))
    )
  )
  "infinite loop"
)